refact: some refactoring
